--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="profile__container">
             <img
               src="./images/profile-avatar.jpg"
-              alt=""
+              alt="Аватар пользователя"
               class="profile__avatar"
             />
             <article class="profile__info">
@@ -27,16 +27,36 @@
                 <button class="profile__edit-btn">
                   <img
                     src="./images/edit-btn.svg"
-                    alt=""
+                    alt="карандаш"
                     class="profile__img-edit-btn"
                   />
                 </button>
+                <div class="popup">
+                  <div action="" class="popup__container">
+                    <button class="popup__close-btn"></button>
+                    <form action="" class="popup__form">
+                      <h2 class="popup__title">Редактировать профиль</h2>
+                      <input type="text" name="" id="" class="popup__name" />
+                      <input
+                        type="text"
+                        name=""
+                        id=""
+                        class="popup__profession"
+                      />
+                      <button class="popup__submit">Сохранить</button>
+                    </form>
+                  </div>
+                </div>
               </div>
               <p class="profile__profession">Исследователь океана</p>
             </article>
           </div>
           <button class="add-btn">
-            <img src="./images/add-btn.svg" alt="" class="add-button__img" />
+            <img
+              src="./images/add-btn.svg"
+              alt="знак сложения (плюс)"
+              class="add-button__img"
+            />
           </button>
         </section>
         <section class="cards-container">
@@ -45,7 +65,11 @@
             <div class="card__heading">
               <h2 class="card__title">Домбай</h2>
               <button class="card__like-btn">
-                <img src="./images/like.svg" alt="" class="card__like-img" />
+                <img
+                  src="./images/like.svg"
+                  alt="знак сердца"
+                  class="card__like-img"
+                />
               </button>
             </div>
           </div>
@@ -58,7 +82,11 @@
             <div class="card__heading">
               <h2 class="card__title">Карачаевск</h2>
               <button class="card__like-btn">
-                <img src="./images/like.svg" alt="" class="card__like-img" />
+                <img
+                  src="./images/like.svg"
+                  alt="знак сердца"
+                  class="card__like-img"
+                />
               </button>
             </div>
           </div>
@@ -71,7 +99,11 @@
             <div class="card__heading">
               <h2 class="card__title">Австралия</h2>
               <button class="card__like-btn">
-                <img src="./images/like.svg" alt="" class="card__like-img" />
+                <img
+                  src="./images/like.svg"
+                  alt="знак сердца"
+                  class="card__like-img"
+                />
               </button>
             </div>
           </div>
@@ -84,7 +116,11 @@
             <div class="card__heading">
               <h2 class="card__title">Бермудские острова</h2>
               <button class="card__like-btn">
-                <img src="./images/like.svg" alt="" class="card__like-img" />
+                <img
+                  src="./images/like.svg"
+                  alt="знак сердца"
+                  class="card__like-img"
+                />
               </button>
             </div>
           </div>
@@ -97,7 +133,11 @@
             <div class="card__heading">
               <h2 class="card__title">Лос-Анджелес</h2>
               <button class="card__like-btn">
-                <img src="./images/like.svg" alt="" class="card__like-img" />
+                <img
+                  src="./images/like.svg"
+                  alt="знак сердца"
+                  class="card__like-img"
+                />
               </button>
             </div>
           </div>
@@ -110,7 +150,11 @@
             <div class="card__heading">
               <h2 class="card__title">Красное море</h2>
               <button class="card__like-btn">
-                <img src="./images/like.svg" alt="" class="card__like-img" />
+                <img
+                  src="./images/like.svg"
+                  alt="знак сердца"
+                  class="card__like-img"
+                />
               </button>
             </div>
           </div>
