--- a/index.html
+++ b/index.html
@@ -24,25 +24,14 @@
             <article class="profile__info">
               <div class="profile__btn-container">
                 <h1 class="profile__name">Жак-Ив Кусто</h1>
-                <button class="profile__edit-btn">
-                  <img
-                    src="./images/edit-btn.svg"
-                    alt="карандаш"
-                    class="profile__img-edit-btn"
-                  />
-                </button>
+                <button class="profile__edit-btn"></button>
                 <div class="popup">
-                  <div action="" class="popup__container">
+                  <div class="popup__container">
                     <button class="popup__close-btn"></button>
-                    <form action="" class="popup__form">
+                    <form class="popup__form">
                       <h2 class="popup__title">Редактировать профиль</h2>
-                      <input type="text" name="" id="" class="popup__name" />
-                      <input
-                        type="text"
-                        name=""
-                        id=""
-                        class="popup__profession"
-                      />
+                      <input type="text" class="popup__name" />
+                      <input type="text" class="popup__profession" />
                       <button class="popup__submit">Сохранить</button>
                     </form>
                   </div>
@@ -51,26 +40,14 @@
               <p class="profile__profession">Исследователь океана</p>
             </article>
           </div>
-          <button class="add-btn">
-            <img
-              src="./images/add-btn.svg"
-              alt="знак сложения (плюс)"
-              class="add-button__img"
-            />
-          </button>
+          <button class="add-btn"></button>
         </section>
         <section class="cards-container">
           <div class="card">
             <img src="./images/dombai.jpg" alt="Домбай" class="card__img" />
             <div class="card__heading">
               <h2 class="card__title">Домбай</h2>
-              <button class="card__like-btn">
-                <img
-                  src="./images/like.svg"
-                  alt="знак сердца"
-                  class="card__like-img"
-                />
-              </button>
+              <button class="card__like-btn"></button>
             </div>
           </div>
           <div class="card">
@@ -81,13 +58,7 @@
             />
             <div class="card__heading">
               <h2 class="card__title">Карачаевск</h2>
-              <button class="card__like-btn">
-                <img
-                  src="./images/like.svg"
-                  alt="знак сердца"
-                  class="card__like-img"
-                />
-              </button>
+              <button class="card__like-btn"></button>
             </div>
           </div>
           <div class="card">
@@ -98,13 +69,7 @@
             />
             <div class="card__heading">
               <h2 class="card__title">Австралия</h2>
-              <button class="card__like-btn">
-                <img
-                  src="./images/like.svg"
-                  alt="знак сердца"
-                  class="card__like-img"
-                />
-              </button>
+              <button class="card__like-btn"></button>
             </div>
           </div>
           <div class="card">
@@ -115,13 +80,7 @@
             />
             <div class="card__heading">
               <h2 class="card__title">Бермудские острова</h2>
-              <button class="card__like-btn">
-                <img
-                  src="./images/like.svg"
-                  alt="знак сердца"
-                  class="card__like-img"
-                />
-              </button>
+              <button class="card__like-btn"></button>
             </div>
           </div>
           <div class="card">
@@ -132,13 +91,7 @@
             />
             <div class="card__heading">
               <h2 class="card__title">Лос-Анджелес</h2>
-              <button class="card__like-btn">
-                <img
-                  src="./images/like.svg"
-                  alt="знак сердца"
-                  class="card__like-img"
-                />
-              </button>
+              <button class="card__like-btn"></button>
             </div>
           </div>
           <div class="card">
@@ -149,13 +102,7 @@
             />
             <div class="card__heading">
               <h2 class="card__title">Красное море</h2>
-              <button class="card__like-btn">
-                <img
-                  src="./images/like.svg"
-                  alt="знак сердца"
-                  class="card__like-img"
-                />
-              </button>
+              <button class="card__like-btn"></button>
             </div>
           </div>
         </section>
