--- a/index.html
+++ b/index.html
@@ -30,8 +30,16 @@
                     <button class="popup__close-btn"></button>
                     <form class="popup__form">
                       <h2 class="popup__title">Редактировать профиль</h2>
-                      <input type="text" class="popup__name" />
-                      <input type="text" class="popup__profession" />
+                      <input
+                        type="text"
+                        class="popup__name"
+                        value="Жак-Ив Кусто"
+                      />
+                      <input
+                        type="text"
+                        class="popup__profession"
+                        value="Исследователь океана"
+                      />
                       <button class="popup__submit">Сохранить</button>
                     </form>
                   </div>
@@ -111,5 +119,6 @@
         <p class="footer__copyright">&#169; 2022 Mesto Russia</p>
       </footer>
     </div>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
