--- a/index.html
+++ b/index.html
@@ -25,22 +25,16 @@
               <div class="profile__btn-container">
                 <h1 class="profile__name">Жак-Ив Кусто</h1>
                 <button class="profile__edit-btn"></button>
-                <div class="popup">
+                <div class="popup popup_type_inactive">
                   <div class="popup__container">
                     <button class="popup__close-btn"></button>
                     <form class="popup__form">
                       <h2 class="popup__title">Редактировать профиль</h2>
-                      <input
-                        type="text"
-                        class="popup__name"
-                        value="Жак-Ив Кусто"
-                      />
-                      <input
-                        type="text"
-                        class="popup__profession"
-                        value="Исследователь океана"
-                      />
-                      <button class="popup__submit">Сохранить</button>
+                      <input type="text" class="popup__name" value="" />
+                      <input type="text" class="popup__profession" value="" />
+                      <button type="submit" class="popup__submit">
+                        Сохранить
+                      </button>
                     </form>
                   </div>
                 </div>
