--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <body class="background">
     <div class="page">
       <header class="header">
-        <img src="./images/logo-w.png" alt="логотип" class="header__logo" />
-        <div class="header__line"></div>
+        <img src="./images/logo-w.svg" alt="логотип" class="header__logo" />
       </header>
       <main class="main">
         <section class="profile">
@@ -21,35 +20,22 @@
               alt="Аватар пользователя"
               class="profile__avatar"
             />
-            <article class="profile__info">
+            <div class="profile__info">
               <div class="profile__btn-container">
                 <h1 class="profile__name">Жак-Ив Кусто</h1>
-                <button class="profile__edit-btn"></button>
-                <div class="popup popup_type_inactive">
-                  <div class="popup__container">
-                    <button class="popup__close-btn"></button>
-                    <form class="popup__form">
-                      <h2 class="popup__title">Редактировать профиль</h2>
-                      <input type="text" class="popup__name" value="" />
-                      <input type="text" class="popup__profession" value="" />
-                      <button type="submit" class="popup__submit">
-                        Сохранить
-                      </button>
-                    </form>
-                  </div>
-                </div>
+                <button type="button" class="profile__edit-btn"></button>
               </div>
               <p class="profile__profession">Исследователь океана</p>
-            </article>
+            </div>
           </div>
-          <button class="add-btn"></button>
+          <button type="button" class="profile__add-btn"></button>
         </section>
         <section class="cards-container">
           <div class="card">
             <img src="./images/dombai.jpg" alt="Домбай" class="card__img" />
             <div class="card__heading">
               <h2 class="card__title">Домбай</h2>
-              <button class="card__like-btn"></button>
+              <button type="button" class="card__like-btn"></button>
             </div>
           </div>
           <div class="card">
@@ -60,7 +46,7 @@
             />
             <div class="card__heading">
               <h2 class="card__title">Карачаевск</h2>
-              <button class="card__like-btn"></button>
+              <button type="button" class="card__like-btn"></button>
             </div>
           </div>
           <div class="card">
@@ -71,7 +57,7 @@
             />
             <div class="card__heading">
               <h2 class="card__title">Австралия</h2>
-              <button class="card__like-btn"></button>
+              <button type="button" class="card__like-btn"></button>
             </div>
           </div>
           <div class="card">
@@ -82,7 +68,7 @@
             />
             <div class="card__heading">
               <h2 class="card__title">Бермудские острова</h2>
-              <button class="card__like-btn"></button>
+              <button type="button" class="card__like-btn"></button>
             </div>
           </div>
           <div class="card">
@@ -93,7 +79,7 @@
             />
             <div class="card__heading">
               <h2 class="card__title">Лос-Анджелес</h2>
-              <button class="card__like-btn"></button>
+              <button type="button" class="card__like-btn"></button>
             </div>
           </div>
           <div class="card">
@@ -104,11 +90,26 @@
             />
             <div class="card__heading">
               <h2 class="card__title">Красное море</h2>
-              <button class="card__like-btn"></button>
+              <button type="button" class="card__like-btn"></button>
             </div>
           </div>
         </section>
       </main>
+      <div class="popup">
+        <div class="popup__container">
+          <button type="reset" class="popup__close-btn"></button>
+          <form name="profile" class="popup__form">
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <input type="text" name="name" class="popup__input popup__name" />
+            <input
+              type="text"
+              name="profession"
+              class="popup__input popup__profession"
+            />
+            <button type="submit" class="popup__submit">Сохранить</button>
+          </form>
+        </div>
+      </div>
       <footer class="footer">
         <p class="footer__copyright">&#169; 2022 Mesto Russia</p>
       </footer>
