--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             type="button"
             class="viewer__close-btn popup__close-btn"
           ></button>
-          <img src="" alt="" class="viewer__img" />
+          <img src="#" alt="" class="viewer__img" />
           <h2 class="viewer__title"></h2>
         </div>
       </div>
