--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
               minlength="2"
               maxlength="40"
             />
+            <span class="popup__input-error name-input-error"></span>
             <input
               type="text"
               name="profession"
@@ -55,6 +56,7 @@
               minlength="2"
               maxlength="200"
             />
+            <span class="popup__input-error profession-input-error"></span>
             <button type="submit" class="popup__submit">Сохранить</button>
           </form>
         </div>
