--- a/index.html
+++ b/index.html
@@ -36,28 +36,34 @@
         <div class="popup__container">
           <button type="button" class="popup__close-btn"></button>
           <form name="profile" class="popup__form popup__form_type_profile" novalidate>
-            <h2 class="popup__title">Редактировать профиль</h2>
-            <input
-              type="text"
-              name="name"
-              placeholder="Иван Иванов"
-              class="popup__input popup__input_type_name"
-              required
-              minlength="2"
-              maxlength="40"
-            />
-            <span class="popup__input-error name-input-error"></span>
-            <input
-              type="text"
-              name="profession"
-              placeholder="Инженер"
-              class="popup__input popup__input_type_profession"
-              required
-              minlength="2"
-              maxlength="200"
-            />
-            <span class="popup__input-error profession-input-error"></span>
-            <button type="submit" class="popup__submit">Сохранить</button>
+            <fieldset class="popup__fieldset">
+              <h2 class="popup__title">Редактировать профиль</h2>
+              <label class="popup__field">
+                <input
+                  type="text"
+                  name="name"
+                  placeholder="Иван Иванов"
+                  class="popup__input popup__input_type_name"
+                  required
+                  minlength="2"
+                  maxlength="40"
+                />
+                <span class="popup__input-error name-input-error"></span>
+              </label>
+              <label class="popup__field">
+                <input
+                  type="text"
+                  name="profession"
+                  placeholder="Инженер"
+                  class="popup__input popup__input_type_profession"
+                  required
+                  minlength="2"
+                  maxlength="200"
+                />
+                <span class="popup__input-error profession-input-error"></span>
+              </label>
+              <button type="submit" class="popup__submit">Сохранить</button>
+            </fieldset>
           </form>
         </div>
       </div>
@@ -65,24 +71,32 @@
         <div class="popup__container">
           <button type="button" class="popup__close-btn"></button>
           <form name="card" class="popup__form popup__form_type_card" novalidate>
-            <h2 class="popup__title">Новое место</h2>
-            <input
-              type="text"
-              placeholder="Название"
-              name="card_name"
-              class="popup__input popup__input_type_name"
-              required
-              minlength="1"
-              maxlength="30"
-            />
-            <input
-              type="url"
-              placeholder="Ссылка на картинку"
-              name="link"
-              class="popup__input popup__input_type_link"
-              required
-            />
-            <button type="submit" class="popup__submit">Создать</button>
+            <fieldset class="popup__fieldset">
+              <h2 class="popup__title">Новое место</h2>
+              <label class="popup__field">
+                <input
+                  type="text"
+                  placeholder="Название"
+                  name="card_name"
+                  class="popup__input popup__input_type_name"
+                  required
+                  minlength="1"
+                  maxlength="30"
+                />
+                <span class="popup__input-error card_name-input-error"></span>
+              </label>
+              <label class="popup__field">
+                <input
+                  type="url"
+                  placeholder="Ссылка на картинку"
+                  name="link"
+                  class="popup__input popup__input_type_link"
+                  required
+                />
+                <span class="popup__input-error link-input-error"></span>
+              </label>
+              <button type="submit" class="popup__submit">Создать</button>
+            </fieldset
           </form>
         </div>
       </div>
