add close popup

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <span class="popup__input-error link-input-error"></span>
               </label>
               <button type="submit" class="popup__submit">Создать</button>
-            </fieldset
+            </fieldset>
           </form>
         </div>
       </div>
