--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   minlength="2"
                   maxlength="40"
                 />
-                <span class="popup__input-error name-input-error"></span>
+                <span class="popup__input-error name-error"></span>
               </label>
               <label class="popup__field">
                 <input
@@ -60,7 +60,7 @@
                   minlength="2"
                   maxlength="200"
                 />
-                <span class="popup__input-error profession-input-error"></span>
+                <span class="popup__input-error profession-error"></span>
               </label>
               <button type="submit" class="popup__submit">Сохранить</button>
             </fieldset>
@@ -77,13 +77,13 @@
                 <input
                   type="text"
                   placeholder="Название"
-                  name="card_name"
+                  name="title"
                   class="popup__input popup__input_type_name"
                   required
                   minlength="1"
                   maxlength="30"
                 />
-                <span class="popup__input-error card_name-input-error"></span>
+                <span class="popup__input-error title-error"></span>
               </label>
               <label class="popup__field">
                 <input
@@ -93,7 +93,7 @@
                   class="popup__input popup__input_type_link"
                   required
                 />
-                <span class="popup__input-error link-input-error"></span>
+                <span class="popup__input-error link-error"></span>
               </label>
               <button type="submit" class="popup__submit">Создать</button>
             </fieldset>
