--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         </div>
       </div>
     </template>
+    <script type="module" src="./scripts/Card.js"></script>
     <script src="./scripts/cards.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/validate.js"></script>
