--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </template>
     <script type="module" src="./scripts/Card.js"></script>
     <script src="./scripts/cards.js"></script>
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script src="scripts/index.js"></script>
+    <script src="scripts/FormValidator.js"></script>
   </body>
 </html>
