--- a/index.html
+++ b/index.html
@@ -124,9 +124,7 @@
         </div>
       </div>
     </template>
-    <script type="module" src="./scripts/Card.js"></script>
     <script src="./scripts/cards.js"></script>
-    <script src="scripts/index.js"></script>
-    <script src="scripts/FormValidator.js"></script>
+    <script type="module" src="scripts/index.js"></script>
   </body>
 </html>
