--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="background">
     <div class="page">
       <header class="header">
-        <img src="./images/logo-w.svg" alt="логотип" class="header__logo" />
+        <img src="<%=require('./images/logo-w.svg')%>" alt="логотип" class="header__logo" />
       </header>
       <main class="main">
         <section class="profile">
           <div class="profile__container">
             <img
-              src="./images/profile-avatar.jpg"
+              src="<%=require('./images/profile-avatar.jpg')%>"
               alt="Аватар пользователя"
               class="profile__avatar"
             />
@@ -113,13 +112,13 @@
     <template class="card__template">
       <div class="card">
         <button type="button" class="card__trash-btn"></button>
-        <img src="./images/dombai.jpg" alt="Домбай" class="card__img" />
+        <img src="imagesombai.jpg" alt="Домбай" class="card__img" />
         <div class="card__heading">
           <h2 class="card__title">Домбай</h2>
           <button type="button" class="card__like-btn"></button>
         </div>
       </div>
     </template>
-    <script type="module" src="scripts/index.js"></script>
+    <script type="module" src="pages/index.js"></script>
   </body>
 </html>
