--- a/src/index.html
+++ b/src/index.html
@@ -15,16 +15,16 @@
         <section class="profile">
           <div class="profile__container">
             <img
-              src="<%=require('./images/profile-avatar.jpg')%>"
+              src=""
               alt="Аватар пользователя"
               class="profile__avatar"
             />
             <div class="profile__info">
               <div class="profile__btn-container">
-                <h1 class="profile__name">Жак-Ив Кусто</h1>
+                <h1 class="profile__name"></h1>
                 <button type="button" class="profile__edit-btn"></button>
               </div>
-              <p class="profile__profession">Исследователь океана</p>
+              <p class="profile__profession"></p>
             </div>
           </div>
           <button type="button" class="profile__add-btn"></button>
