--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,10 @@
         <img src="imagesombai.jpg" alt="Домбай" class="card__img" />
         <div class="card__heading">
           <h2 class="card__title">Домбай</h2>
-          <button type="button" class="card__like-btn"></button>
+          <div class="card__like-container">
+            <button type="button" class="card__like-btn"></button>
+            <span class="card__like-counter"></span>
+          </div>
         </div>
       </div>
     </template>
