--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
           <div class="profile__container">
             <button type="button" class="profile__edit-avatar-btn"></button>
             <img
-              src=""
+              src="#"
               alt="Аватар пользователя"
               class="profile__avatar"
             />
